<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.kmanikumarreddy.myappportifolio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Heading"
                style="@style/WrapCenter"
                android:layout_marginTop="5dp"
                android:text="@string/my_nanodegree_apss"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/popularMoviesButton"
                style="@style/WrapCenter"
                android:layout_marginTop="5dp"
                android:onClick="displayInfo"
                android:text="@string/popular_movies" />

            <Button
                android:id="@+id/stockHawkButton"
                style="@style/WrapCenter"
                android:onClick="displayInfo"
                android:text="@string/stock_hawk" />

            <Button
                android:id="@+id/buildItBiggerButton"
                style="@style/WrapCenter"
                android:onClick="displayInfo"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/makeYourAppMaterialButton"
                style="@style/WrapCenter"
                android:onClick="displayInfo"
                android:text="@string/make_your_app_material" />

            <Button
                android:id="@+id/goUbiquitousButton"
                style="@style/WrapCenter"
                android:onClick="displayInfo"
                android:text="@string/go_ubiquitous" />

            <Button
                android:id="@+id/capstoneButton"
                style="@style/WrapCenter"
                android:onClick="displayInfo"
                android:text="@string/capstone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
